aplication properties update

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,12 @@
 spring.application.name=Aprendiendo-Aleman-con-Barchen
 spring.datasource.url=jdbc:postgresql://localhost:5432/aacb
-spring.datasource.username=camiar
+spring.datasource.username=camilo
 spring.datasource.password=wujguc297@
 spring.datasource.driver-class-name=org.postgresql.Driver
 
-spring.jpa.hiberante.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
-spring.jpa.properties.hiberante.dialect=org.hiberante.dialect.PostgreSQLDialect
+spring.jpa.properties.hibernate.dialect=org.hiberante.dialect.PostgreSQLDialect
+
+logging.level.org.hibernate.SQL=DEBUG
+loggin.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
